--- a/FrontEndLojaGeladeira/WebContent/WEB-INF/web.xml
+++ b/FrontEndLojaGeladeira/WebContent/WEB-INF/web.xml
@@ -14,4 +14,10 @@
     <url-pattern>/CadastroLojas</url-pattern>
   </servlet-mapping>
   
+  <context-param>
+  	<description>Onde imagem esta</description>
+  	<param-name>imagem-upload</param-name>
+  	<param-value>/imagens</param-value>
+  </context-param>
+  
 </web-app>
